Refactor: Improve user listing and detail retrieval
Implement pagination and sorting for user listing.  Enhance
error handling and clarify documentation for user details
retrieval.  Exclude sensitive user information (email) from
responses.